--- a/build-graphic-Desktop_Qt_5_2_0_MinGW_32bit-Debug/Makefile.Debug
+++ b/build-graphic-Desktop_Qt_5_2_0_MinGW_32bit-Debug/Makefile.Debug
@@ -14,10 +14,10 @@ CXX           = g++
 DEFINES       = -DUNICODE -DQT_QML_DEBUG -DQT_DECLARATIVE_DEBUG -DQT_WEBKITWIDGETS_LIB -DQT_MULTIMEDIAWIDGETS_LIB -DQT_QUICK_LIB -DQT_POSITIONING_LIB -DQT_OPENGL_LIB -DQT_PRINTSUPPORT_LIB -DQT_MULTIMEDIA_LIB -DQT_QML_LIB -DQT_WEBKIT_LIB -DQT_WIDGETS_LIB -DQT_SENSORS_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN
 CFLAGS        = -pipe -fno-keep-inline-dllexport -g -Wall -Wextra $(DEFINES)
 CXXFLAGS      = -pipe -fno-keep-inline-dllexport -g -frtti -Wall -Wextra -fexceptions -mthreads $(DEFINES)
-INCPATH       = -I..\graphic -I"..\graphic" -I"C:\Qt\5.2.0\mingw48_32\include" -I"C:\Qt\5.2.0\mingw48_32\include\QtWebKitWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtMultimediaWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtQuick" -I"C:\Qt\5.2.0\mingw48_32\include\QtPositioning" -I"C:\Qt\5.2.0\mingw48_32\include\QtOpenGL" -I"C:\Qt\5.2.0\mingw48_32\include\QtPrintSupport" -I"C:\Qt\5.2.0\mingw48_32\include\QtMultimedia" -I"C:\Qt\5.2.0\mingw48_32\include\QtQml" -I"C:\Qt\5.2.0\mingw48_32\include\QtWebKit" -I"C:\Qt\5.2.0\mingw48_32\include\QtWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtSensors" -I"C:\Qt\5.2.0\mingw48_32\include\QtNetwork" -I"C:\Qt\5.2.0\mingw48_32\include\QtGui" -I"C:\Qt\5.2.0\mingw48_32\include\QtCore" -I"debug" -I"." -I"C:\Qt\5.2.0\mingw48_32\mkspecs\win32-g++"
+INCPATH       = -I..\graphic -I"..\graphic" -I"..\..\applicationmusic" -I"C:\Qt\5.2.0\mingw48_32\include" -I"C:\Qt\5.2.0\mingw48_32\include\QtWebKitWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtMultimediaWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtQuick" -I"C:\Qt\5.2.0\mingw48_32\include\QtPositioning" -I"C:\Qt\5.2.0\mingw48_32\include\QtOpenGL" -I"C:\Qt\5.2.0\mingw48_32\include\QtPrintSupport" -I"C:\Qt\5.2.0\mingw48_32\include\QtMultimedia" -I"C:\Qt\5.2.0\mingw48_32\include\QtQml" -I"C:\Qt\5.2.0\mingw48_32\include\QtWebKit" -I"C:\Qt\5.2.0\mingw48_32\include\QtWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtSensors" -I"C:\Qt\5.2.0\mingw48_32\include\QtNetwork" -I"C:\Qt\5.2.0\mingw48_32\include\QtGui" -I"C:\Qt\5.2.0\mingw48_32\include\QtCore" -I"debug" -I"." -I"C:\Qt\5.2.0\mingw48_32\mkspecs\win32-g++"
 LINKER      =        g++
 LFLAGS        =        -Wl,-subsystem,windows -mthreads
-LIBS        =        -lglu32 -lopengl32 -lgdi32 -luser32 -lmingw32 -lqtmaind -L/. -lfmodex -LC:\Qt\5.2.0\mingw48_32\lib -lQt5WebKitWidgetsd -lQt5MultimediaWidgetsd -lQt5Quickd -lQt5Positioningd -lQt5OpenGLd -lQt5PrintSupportd -lQt5Multimediad -lQt5Qmld -lQt5WebKitd -lQt5Widgetsd -lQt5Sensorsd -lQt5Networkd -lQt5Guid -lQt5Cored 
+LIBS        =        -lglu32 -lopengl32 -lgdi32 -luser32 -lmingw32 -lqtmaind -L/../ -lfmodex -LC:\Qt\5.2.0\mingw48_32\lib -lQt5WebKitWidgetsd -lQt5MultimediaWidgetsd -lQt5Quickd -lQt5Positioningd -lQt5OpenGLd -lQt5PrintSupportd -lQt5Multimediad -lQt5Qmld -lQt5WebKitd -lQt5Widgetsd -lQt5Sensorsd -lQt5Networkd -lQt5Guid -lQt5Cored 
 QMAKE         = C:\Qt\5.2.0\mingw48_32\bin\qmake.exe
 IDC           = idc
 IDL           = midl
@@ -47,13 +47,15 @@ SOURCES       = ..\graphic\noskin.cpp \
 		..\graphic\test.cpp \
 		..\graphic\controller.cpp \
 		..\graphic\confwindow.cpp \
-		..\graphic\configuration.cpp debug\moc_controller.cpp \
+		..\graphic\configuration.cpp \
+		fmodinit.cpp debug\moc_controller.cpp \
 		debug\moc_confwindow.cpp
 OBJECTS       = debug/noskin.o \
 		debug/test.o \
 		debug/controller.o \
 		debug/confwindow.o \
 		debug/configuration.o \
+		debug/fmodinit.o \
 		debug/moc_controller.o \
 		debug/moc_confwindow.o
 
@@ -96,7 +98,7 @@ dist:
 	$(ZIP) graphic.zip $(SOURCES) $(DIST) ..\graphic\graphic.pro C:\Qt\5.2.0\mingw48_32\mkspecs\features\spec_pre.prf C:\Qt\5.2.0\mingw48_32\mkspecs\qdevice.pri C:\Qt\5.2.0\mingw48_32\mkspecs\features\device_config.prf C:\Qt\5.2.0\mingw48_32\mkspecs\common\shell-win32.conf C:\Qt\5.2.0\mingw48_32\mkspecs\qconfig.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axbase.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axbase_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axcontainer.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axcontainer_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axserver.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axserver_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_bluetooth.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_bluetooth_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_bootstrap_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_clucene_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_concurrent.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_concurrent_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_core.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_core_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_declarative.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_declarative_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_designer.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_designer_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_designercomponents_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_gui.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_gui_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_help.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_help_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_multimedia.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_multimedia_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_multimediawidgets.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_multimediawidgets_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_network.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_network_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_nfc.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_nfc_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_opengl.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_opengl_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_openglextensions.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_openglextensions_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_platformsupport_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_positioning.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_positioning_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_printsupport.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_printsupport_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qml.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qml_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qmldevtools_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qmltest.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qmltest_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qtmultimediaquicktools_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_quick.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_quick_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_quickparticles_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_script.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_script_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_scripttools.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_scripttools_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_sensors.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_sensors_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_serialport.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_serialport_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_sql.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_sql_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_svg.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_svg_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_testlib.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_testlib_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_uitools.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_uitools_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_webkit.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_webkit_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_webkitwidgets.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_webkitwidgets_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_widgets.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_widgets_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_winextras.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_winextras_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_xml.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_xml_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_xmlpatterns.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_xmlpatterns_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\features\qt_functions.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\qt_config.prf C:\Qt\5.2.0\mingw48_32\mkspecs\win32-g++\qmake.conf C:\Qt\5.2.0\mingw48_32\mkspecs\features\spec_post.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\exclusive_builds.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\default_pre.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\win32\default_pre.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\resolve_config.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\exclusive_builds_post.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\default_post.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\build_pass.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\qml_debug.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\declarative_debug.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\win32\rtti.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\warn_on.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\qt.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\resources.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\moc.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\win32\opengl.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\uic.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\win32\windows.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\testcase_targets.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\exceptions.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\yacc.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\lex.prf ..\graphic\graphic.pro C:/Qt/5.2.0/mingw48_32/lib/Qt5WebKitWidgetsd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5MultimediaWidgetsd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Quickd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Positioningd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5OpenGLd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5PrintSupportd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Multimediad.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Qmld.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5WebKitd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Widgetsd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Sensorsd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Networkd.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Guid.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Cored.prl  RESOURCES HEADERS SOURCES OBJECTIVE_SOURCES FORMS YACCSOURCES YACCSOURCES LEXSOURCES 
 
 clean: compiler_clean 
-	-$(DEL_FILE) debug\noskin.o debug\test.o debug\controller.o debug\confwindow.o debug\configuration.o debug\moc_controller.o debug\moc_confwindow.o
+	-$(DEL_FILE) debug\noskin.o debug\test.o debug\controller.o debug\confwindow.o debug\configuration.o debug\fmodinit.o debug\moc_controller.o debug\moc_confwindow.o
 
 distclean: clean
 	-$(DEL_FILE) $(DESTDIR_TARGET)
@@ -266,6 +268,8 @@ debug/moc_controller.cpp: ../graphic/noskin.h \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/confwindow.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/QStackedWidget \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/qstackedwidget.h \
@@ -465,6 +469,8 @@ debug/moc_confwindow.cpp: C:/Qt/5.2.0/mingw48_32/include/QtWidgets/QMainWindow \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/configuration.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/QString \
 		../graphic/confwindow.h
@@ -638,7 +644,9 @@ debug/noskin.o: ../graphic/noskin.cpp ../graphic/noskin.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/qabstractitemmodel.h \
 		../model/partition.h \
 		../model/chord.h \
-		../model/note.h
+		../model/note.h \
+		../fmod.hpp \
+		../fmod.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\noskin.o ..\graphic\noskin.cpp
 
 debug/test.o: ../graphic/test.cpp ../graphic/noskin.h \
@@ -794,6 +802,8 @@ debug/test.o: ../graphic/test.cpp ../graphic/noskin.h \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/controller.h \
 		../graphic/confwindow.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/QStackedWidget \
@@ -974,6 +984,8 @@ debug/controller.o: ../graphic/controller.cpp ../graphic/controller.h \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/confwindow.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/QStackedWidget \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/qstackedwidget.h \
@@ -1173,6 +1185,8 @@ debug/confwindow.o: ../graphic/confwindow.cpp ../graphic/confwindow.h \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/configuration.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/QString
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\confwindow.o ..\graphic\confwindow.cpp
@@ -1223,6 +1237,9 @@ debug/configuration.o: ../graphic/configuration.cpp ../graphic/configuration.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/qarraydata.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/qstringbuilder.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\configuration.o ..\graphic\configuration.cpp
+
+debug/fmodinit.o: fmodinit.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\fmodinit.o fmodinit.cpp
 
 debug/moc_controller.o: debug/moc_controller.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\moc_controller.o debug\moc_controller.cpp
