--- a/build-graphic-Desktop_Qt_5_2_0_MinGW_32bit-Debug/Makefile.Release
+++ b/build-graphic-Desktop_Qt_5_2_0_MinGW_32bit-Debug/Makefile.Release
@@ -14,10 +14,10 @@ CXX           = g++
 DEFINES       = -DUNICODE -DQT_QML_DEBUG -DQT_DECLARATIVE_DEBUG -DQT_NO_DEBUG -DQT_WEBKITWIDGETS_LIB -DQT_MULTIMEDIAWIDGETS_LIB -DQT_QUICK_LIB -DQT_POSITIONING_LIB -DQT_OPENGL_LIB -DQT_PRINTSUPPORT_LIB -DQT_MULTIMEDIA_LIB -DQT_QML_LIB -DQT_WEBKIT_LIB -DQT_WIDGETS_LIB -DQT_SENSORS_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN
 CFLAGS        = -pipe -fno-keep-inline-dllexport -O2 -Wall -Wextra $(DEFINES)
 CXXFLAGS      = -pipe -fno-keep-inline-dllexport -O2 -frtti -Wall -Wextra -fexceptions -mthreads $(DEFINES)
-INCPATH       = -I..\graphic -I"..\graphic" -I"C:\Qt\5.2.0\mingw48_32\include" -I"C:\Qt\5.2.0\mingw48_32\include\QtWebKitWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtMultimediaWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtQuick" -I"C:\Qt\5.2.0\mingw48_32\include\QtPositioning" -I"C:\Qt\5.2.0\mingw48_32\include\QtOpenGL" -I"C:\Qt\5.2.0\mingw48_32\include\QtPrintSupport" -I"C:\Qt\5.2.0\mingw48_32\include\QtMultimedia" -I"C:\Qt\5.2.0\mingw48_32\include\QtQml" -I"C:\Qt\5.2.0\mingw48_32\include\QtWebKit" -I"C:\Qt\5.2.0\mingw48_32\include\QtWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtSensors" -I"C:\Qt\5.2.0\mingw48_32\include\QtNetwork" -I"C:\Qt\5.2.0\mingw48_32\include\QtGui" -I"C:\Qt\5.2.0\mingw48_32\include\QtCore" -I"release" -I"." -I"C:\Qt\5.2.0\mingw48_32\mkspecs\win32-g++"
+INCPATH       = -I..\graphic -I"..\graphic" -I"..\..\applicationmusic" -I"C:\Qt\5.2.0\mingw48_32\include" -I"C:\Qt\5.2.0\mingw48_32\include\QtWebKitWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtMultimediaWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtQuick" -I"C:\Qt\5.2.0\mingw48_32\include\QtPositioning" -I"C:\Qt\5.2.0\mingw48_32\include\QtOpenGL" -I"C:\Qt\5.2.0\mingw48_32\include\QtPrintSupport" -I"C:\Qt\5.2.0\mingw48_32\include\QtMultimedia" -I"C:\Qt\5.2.0\mingw48_32\include\QtQml" -I"C:\Qt\5.2.0\mingw48_32\include\QtWebKit" -I"C:\Qt\5.2.0\mingw48_32\include\QtWidgets" -I"C:\Qt\5.2.0\mingw48_32\include\QtSensors" -I"C:\Qt\5.2.0\mingw48_32\include\QtNetwork" -I"C:\Qt\5.2.0\mingw48_32\include\QtGui" -I"C:\Qt\5.2.0\mingw48_32\include\QtCore" -I"release" -I"." -I"C:\Qt\5.2.0\mingw48_32\mkspecs\win32-g++"
 LINKER      =        g++
 LFLAGS        =        -Wl,-s -Wl,-subsystem,windows -mthreads
-LIBS        =        -lglu32 -lopengl32 -lgdi32 -luser32 -lmingw32 -lqtmain -L/. -lfmodex -LC:\Qt\5.2.0\mingw48_32\lib -lQt5WebKitWidgets -lQt5MultimediaWidgets -lQt5Quick -lQt5Positioning -lQt5OpenGL -lQt5PrintSupport -lQt5Multimedia -lQt5Qml -lQt5WebKit -lQt5Widgets -lQt5Sensors -lQt5Network -lQt5Gui -lQt5Core 
+LIBS        =        -lglu32 -lopengl32 -lgdi32 -luser32 -lmingw32 -lqtmain -L/../ -lfmodex -LC:\Qt\5.2.0\mingw48_32\lib -lQt5WebKitWidgets -lQt5MultimediaWidgets -lQt5Quick -lQt5Positioning -lQt5OpenGL -lQt5PrintSupport -lQt5Multimedia -lQt5Qml -lQt5WebKit -lQt5Widgets -lQt5Sensors -lQt5Network -lQt5Gui -lQt5Core 
 QMAKE         = C:\Qt\5.2.0\mingw48_32\bin\qmake.exe
 IDC           = idc
 IDL           = midl
@@ -47,13 +47,15 @@ SOURCES       = ..\graphic\noskin.cpp \
 		..\graphic\test.cpp \
 		..\graphic\controller.cpp \
 		..\graphic\confwindow.cpp \
-		..\graphic\configuration.cpp release\moc_controller.cpp \
+		..\graphic\configuration.cpp \
+		fmodinit.cpp release\moc_controller.cpp \
 		release\moc_confwindow.cpp
 OBJECTS       = release/noskin.o \
 		release/test.o \
 		release/controller.o \
 		release/confwindow.o \
 		release/configuration.o \
+		release/fmodinit.o \
 		release/moc_controller.o \
 		release/moc_confwindow.o
 
@@ -96,7 +98,7 @@ dist:
 	$(ZIP) graphic.zip $(SOURCES) $(DIST) ..\graphic\graphic.pro C:\Qt\5.2.0\mingw48_32\mkspecs\features\spec_pre.prf C:\Qt\5.2.0\mingw48_32\mkspecs\qdevice.pri C:\Qt\5.2.0\mingw48_32\mkspecs\features\device_config.prf C:\Qt\5.2.0\mingw48_32\mkspecs\common\shell-win32.conf C:\Qt\5.2.0\mingw48_32\mkspecs\qconfig.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axbase.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axbase_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axcontainer.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axcontainer_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axserver.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_axserver_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_bluetooth.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_bluetooth_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_bootstrap_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_clucene_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_concurrent.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_concurrent_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_core.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_core_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_declarative.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_declarative_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_designer.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_designer_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_designercomponents_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_gui.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_gui_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_help.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_help_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_multimedia.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_multimedia_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_multimediawidgets.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_multimediawidgets_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_network.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_network_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_nfc.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_nfc_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_opengl.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_opengl_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_openglextensions.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_openglextensions_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_platformsupport_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_positioning.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_positioning_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_printsupport.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_printsupport_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qml.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qml_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qmldevtools_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qmltest.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qmltest_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_qtmultimediaquicktools_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_quick.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_quick_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_quickparticles_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_script.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_script_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_scripttools.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_scripttools_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_sensors.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_sensors_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_serialport.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_serialport_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_sql.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_sql_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_svg.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_svg_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_testlib.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_testlib_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_uitools.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_uitools_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_webkit.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_webkit_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_webkitwidgets.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_webkitwidgets_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_widgets.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_widgets_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_winextras.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_winextras_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_xml.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_xml_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_xmlpatterns.pri C:\Qt\5.2.0\mingw48_32\mkspecs\modules\qt_lib_xmlpatterns_private.pri C:\Qt\5.2.0\mingw48_32\mkspecs\features\qt_functions.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\qt_config.prf C:\Qt\5.2.0\mingw48_32\mkspecs\win32-g++\qmake.conf C:\Qt\5.2.0\mingw48_32\mkspecs\features\spec_post.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\exclusive_builds.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\default_pre.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\win32\default_pre.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\resolve_config.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\exclusive_builds_post.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\default_post.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\build_pass.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\qml_debug.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\declarative_debug.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\win32\rtti.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\warn_on.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\qt.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\resources.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\moc.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\win32\opengl.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\uic.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\win32\windows.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\testcase_targets.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\exceptions.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\yacc.prf C:\Qt\5.2.0\mingw48_32\mkspecs\features\lex.prf ..\graphic\graphic.pro C:/Qt/5.2.0/mingw48_32/lib/Qt5WebKitWidgets.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5MultimediaWidgets.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Quick.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Positioning.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5OpenGL.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5PrintSupport.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Multimedia.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Qml.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5WebKit.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Widgets.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Sensors.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Network.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Gui.prl C:/Qt/5.2.0/mingw48_32/lib/Qt5Core.prl  RESOURCES HEADERS SOURCES OBJECTIVE_SOURCES FORMS YACCSOURCES YACCSOURCES LEXSOURCES 
 
 clean: compiler_clean 
-	-$(DEL_FILE) release\noskin.o release\test.o release\controller.o release\confwindow.o release\configuration.o release\moc_controller.o release\moc_confwindow.o
+	-$(DEL_FILE) release\noskin.o release\test.o release\controller.o release\confwindow.o release\configuration.o release\fmodinit.o release\moc_controller.o release\moc_confwindow.o
 
 distclean: clean
 	-$(DEL_FILE) $(DESTDIR_TARGET)
@@ -266,6 +268,8 @@ release/moc_controller.cpp: ../graphic/noskin.h \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/confwindow.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/QStackedWidget \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/qstackedwidget.h \
@@ -465,6 +469,8 @@ release/moc_confwindow.cpp: C:/Qt/5.2.0/mingw48_32/include/QtWidgets/QMainWindow
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/configuration.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/QString \
 		../graphic/confwindow.h
@@ -638,7 +644,9 @@ release/noskin.o: ../graphic/noskin.cpp ../graphic/noskin.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/qabstractitemmodel.h \
 		../model/partition.h \
 		../model/chord.h \
-		../model/note.h
+		../model/note.h \
+		../fmod.hpp \
+		../fmod.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\noskin.o ..\graphic\noskin.cpp
 
 release/test.o: ../graphic/test.cpp ../graphic/noskin.h \
@@ -794,6 +802,8 @@ release/test.o: ../graphic/test.cpp ../graphic/noskin.h \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/controller.h \
 		../graphic/confwindow.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/QStackedWidget \
@@ -974,6 +984,8 @@ release/controller.o: ../graphic/controller.cpp ../graphic/controller.h \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/confwindow.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/QStackedWidget \
 		C:/Qt/5.2.0/mingw48_32/include/QtWidgets/qstackedwidget.h \
@@ -1173,6 +1185,8 @@ release/confwindow.o: ../graphic/confwindow.cpp ../graphic/confwindow.h \
 		../model/partition.h \
 		../model/chord.h \
 		../model/note.h \
+		../fmod.hpp \
+		../fmod.h \
 		../graphic/configuration.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/QString
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\confwindow.o ..\graphic\confwindow.cpp
@@ -1223,6 +1237,9 @@ release/configuration.o: ../graphic/configuration.cpp ../graphic/configuration.h
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/qarraydata.h \
 		C:/Qt/5.2.0/mingw48_32/include/QtCore/qstringbuilder.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\configuration.o ..\graphic\configuration.cpp
+
+release/fmodinit.o: fmodinit.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\fmodinit.o fmodinit.cpp
 
 release/moc_controller.o: release/moc_controller.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\moc_controller.o release\moc_controller.cpp
